--- a/main.html
+++ b/main.html
@@ -14,12 +14,20 @@
 <h1>Muskan Sheikh</h1>
 	<a href="#">linked in</a>
 	<br>
+	<div id="skills">
 	<h3>Skills</h3>
 	<ul>
 		<li>HTML</li>
 		<li>CSS</li>
 		<li>JS</li>
 	</ul>
+		</div>
+	<div id="projects">
+		<ul>
+			<li>BLINKIT CLONE</li>
+			<li>SPOTIFY CLONE</li>
+		</ul>
+	</div>
 </body>
 
 </html>
